# game-task-manager

./: .env.example  README.md
backend/: Dockerfile  (+2 more)
backend/src/: pyproject.toml
backend/src/alembic/: env.py
backend/src/alembic/versions/: 1_init_project.py  2_add_notifications.py  3_add_project_members_and_invitations.py
backend/src/app/: constant.py  enum.py  main.py
backend/src/app/adapters/cache/: __init__.py  exception.py  factory.py
backend/src/app/auth/: constant.py  query_param.py  type.py
backend/src/app/core/: __init__.py  db.py  env.py  scheduler.py
backend/src/app/error_handler/: __init__.py  constant.py  error_schemas.py
backend/src/app/invitations/: model.py  repository.py  schema.py  service.py
backend/src/app/lvls/: model.py  repository.py  schema.py  service.py
backend/src/app/mock/: __init__.py  bootstrap.py  constants.py  demo_workspace.py  seed_helpers.py
backend/src/app/notifications/: filter.py  model.py  repository.py  schema.py  service.py
backend/src/app/projects/: filter.py  model.py  repository.py  schema.py  service.py  type.py
backend/src/app/security/: __init__.py  constant.py  hash_password.py  token.py
backend/src/app/system_logging/: filter.py  model.py  repository.py  schema.py  service.py  type.py
backend/src/app/tasks/: filter.py  model.py  repository.py  schema.py  service.py  type.py
backend/src/app/teams/: filter.py  model.py  repository.py  schema.py  service.py  type.py
backend/src/app/users/: dependency.py  filter.py  init_superuser.py  model.py  repository.py  schema.py  service.py  type.py
(+117 files in other folders)
